fix for the landing page layout issues

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1084,13 +1084,6 @@ table th {
     position: relative;
     top: calc(50% - 0.6rem); }
 
-.layout-mobile.home_container .app_container-content {
-  min-height: calc(100vh);
-  max-height: calc(100vh); }
-
-.layout-mobile.home_container .home_container-content {
-  width: 100%; }
-
 .home_header_button {
   height: 28px;
   font-weight: bold; }
@@ -1110,10 +1103,6 @@ table th {
   .home_container .quick_trade-wrapper {
     min-width: 30rem;
     max-width: 40rem; }
-  .home_container .home_container-content {
-    margin: auto;
-    width: 90%;
-    max-width: 900px; }
   .home_container .exchange-expired {
     background-color: #ed1c24 !important;
     color: #ffffff !important; }
